themes/signum/assets/styles/_header.scss
.blog .header-div {
	background-color: $white;
}

.header {
	margin : 0 auto;
	padding: 1.125rem 0;

	.navbar {
		@include media-breakpoint-down(md) {
			padding-left : 0;
			padding-right: 0;
		}

		.navbar-brand {
			justify-content: flex-start;
			align-items    : center;
			flex           : 2;

			@include media-breakpoint-up(lg) {
				flex: 1.2;
			}

			@include media-breakpoint-down(md) {
				margin-left: 1rem;
			}

			img {
				width: 275px;

				@include media-breakpoint-down(md) {
					width: 200px;
				}
			}
		}

		.navbar-toggler {
			border      : none;
			transform   : translateX(.9375rem);
			margin-right: 1rem;

			&:focus {
				border    : none;
				box-shadow: none;
				outline   : none;
			}
		}

		.navbar-nav {
			margin-left: auto;
			align-items: center;

			@include media-breakpoint-down(md) {
				align-items: flex-end;
				width      : 100%;
			}

			.nav-item {

				@include media-breakpoint-down(md) {
					width: 100%;
				}

				.nav-link {
					color      : $gray-900;
					font-family: 'Roboto', sans-serif;
					font-size  : 0.9375rem;
					font-weight: 500;
					margin     : 0 1rem;
					position   : relative;

					@include media-breakpoint-down(md) {
						padding   : 1rem;
						margin    : 0;
						text-align: right;
					}

					&:hover {
						text-decoration: none;
						color          : $primary;

						&::after {
							background-color: $green;
						}
					}
				}

				&.show {
					.nav-link {
						&::after {
							background-color: $green;
						}
					}
				}

				&.dropdown {
					&.show {
						.dropdown-menu {
							left       : 50%;
							transform  : translateX(-50%);
							padding-top: 0;

							@include media-breakpoint-down(md) {
								left         : 0;
								transform    : translate(0);
								box-shadow   : none;
								border-radius: 0;
							}
						}
					}
				}
			}
		}

		.navbar-button {
			margin-left: 1.125rem;

			@include media-breakpoint-down(md) {
				margin-right: 1rem;
			}
		}
	}
}

